tests/NormalTests/paczka1/small_fuzzy/43983781.err
Error in line 5: aJhCAyCR S19 40,3
Error in line 4: 6DTbj4Wb A840 95,4
Error in line 15: 6DTbj4Wb S92 -4,4
